<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dimYellow"
    >

    <ScrollView
        android:id="@+id/sv_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/rl_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/topic"
                style="@style/TextView"
                android:layout_alignParentTop="true"
                android:background="@color/lightRed"
                android:text="@string/topic"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/txt_40sp"
                android:textStyle="bold"

                />

            <ImageView
                android:id="@+id/ic_nastlogo"
                android:layout_width="@dimen/dimen_400dp"
                android:layout_height="@dimen/dimen_150dp"
                android:layout_below="@+id/topic"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:src="@drawable/ic_nastlogo" />

            <EditText
                android:id="@+id/et_email"
                style="@style/EditText"
                android:layout_below="@id/ic_nastlogo"
                android:layout_marginBottom="@dimen/dimen_40dp"
                android:hint="@string/et_email"
                android:drawablePadding="@dimen/dimen_20dp"
                android:drawableStart="@drawable/ic_user"
                android:textColorHint="@color/colorAccent"
                android:background="@color/colorWhite"
                android:inputType="textEmailAddress"
                />
            <RelativeLayout
                android:id="@+id/rv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_email"
                >
            <EditText
                android:id="@+id/et_password"
                style="@style/EditText"
                android:paddingEnd="@dimen/dimen_45dp"
                android:layout_marginBottom="@dimen/dimen_40dp"
                android:drawablePadding="@dimen/dimen_20dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/et_password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorAccent"
                />

            </RelativeLayout>
            <TextView
                style="@style/TextView"
                android:id="@+id/tv_forgot_your_password"
                android:layout_below="@id/rv_password"
                android:text="@string/tv_forgot_your_password"
                android:textSize="@dimen/txt_20sp"
                android:textColor="@color/colorBlue"
                android:layout_marginBottom="@dimen/dimen_100dp"
                />
            <TextView
                android:id="@+id/tv_no_of_attempts_remaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView"
                android:textSize="@dimen/txt_23sp"
                android:text="@string/tv_noOfAttempts"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_below="@id/tv_forgot_your_password"
                />
            <Button
                android:id="@+id/btn_login"
                style="@style/Button"
                android:layout_below="@+id/tv_no_of_attempts_remaining"
                android:layout_alignParentBottom="true"
                android:background="@color/silver"
                android:text="@string/btn_login"
                android:textColorHint="@color/red" />
        </RelativeLayout>

    </ScrollView>



</RelativeLayout>
