<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@drawable/splash"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        style="@style/TextView"
        android:layout_alignParentTop="true"
        android:background="@color/lightRed"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/txt_40sp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
<Button
    android:textAlignment="center"
    android:id="@+id/btn_splash_login"
    android:textSize="@dimen/txt_30sp"
    android:layout_centerHorizontal="true"
    android:layout_width="@dimen/dimen_200dp"
    android:layout_height="wrap_content"
    android:text="@string/btn_login"
    android:layout_marginBottom="@dimen/dimen_15dp"
    android:textColor="@color/colorPrimaryDark"
    />
    <Button
        android:id="@+id/btn_splash_register"
        android:layout_centerInParent="true"
        style="@style/Button"
        android:textSize="@dimen/txt_30sp"
        android:layout_below="@id/btn_splash_login"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:textColor="@color/colorPrimaryDark"
        />
    </RelativeLayout>
</RelativeLayout>