<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_nastlogo" />

            <EditText
                android:id="@+id/et_email"
                style="@style/EditText"
                android:layout_below="@+id/iv_logo"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:drawablePadding="@dimen/dimen_10dp"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/et_email"
                android:inputType="textEmailAddress" />

            <RelativeLayout
                android:id="@+id/rv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_email">

                <EditText
                    android:id="@+id/et_password"
                    style="@style/EditText"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    android:paddingEnd="@dimen/dimen_45dp" />

                <ImageButton
                    android:id="@+id/btn_show_hide_login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/et_password"
                    android:layout_alignRight="@id/et_password"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:background="@null"
                    android:contentDescription="@null"
                    android:padding="@dimen/dimen_10dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_password"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/tv_forgot_your_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txt_17sp" />
        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/tv_login"
        android:textColor="@color/colorWhite" />

</RelativeLayout>


<!--
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/tv_login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/txt_17sp" />

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dimen_50dp"
                android:layout_marginTop="@dimen/dimen_85dp"
                android:contentDescription="@null"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/et_email"
                style="@style/EditText"
                android:layout_below="@+id/iv_logo"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/dimen_10dp"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/et_email"
                android:inputType="textEmailAddress"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditText"
                android:layout_below="@+id/et_email"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/dimen_10dp"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/et_password"
                android:inputType="textPassword"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

    </ScrollView>
-->